<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu …</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="transition_from_bottom_button">More (transition from bottom)</string>
    <string name="transition_from_right_button">More (transition from right)</string>
    <string name="animation_from_bottom_button">More (animation from bottom)</string>
    <string name="animation_from_right_button">More (animation from right)</string>
    <string name="back_button">Back</string>

    <string name="transitions_case1_description">Case 1: Shared element transition with the same layouts - bug</string>
    <string name="transitions_case2_description">Case 2: Shared element with fragment transition</string>
    <string name="transitions_case3_description">Case 3: Shared element with nav graph animation</string>
    <string name="transitions_case4_description">Case 4: Shared element with transition delay</string>
    <string name="transitions_case5_description">Case 5: Shared element with recurring navigation</string>
</resources>